finish porting everything (black screen for now)