@@ -60,13 +60,9 @@ public class Parser {
 	Parser() {
 	}
 
-	public static ExpressionElement parse(String input, ParserOptions options) throws ParseException {
-		return Tokenizer.parse(input, options);
-	}
-
 	private Element peek() {
 		if (!this.stack.isEmpty()) {
-			return this.stack.getLast();
+			return this.stack.get(this.stack.size() - 1);
 		}
 
 		return null;
@@ -77,7 +73,7 @@ public class Parser {
 			throw new IllegalStateException("Internal token stack is empty");
 		}
 
-		return this.stack.removeLast();
+		return this.stack.remove(this.stack.size() - 1);
 	}
 
 	private void push(Element element) {
@@ -119,8 +115,6 @@ public class Parser {
 		return token;
 	}
 
-	// visitor methods
-
 	/**
 	 * Executes following reduce step:
 	 * <ul>
@@ -140,8 +134,8 @@ public class Parser {
 
 		if (args == null) {
 			throw new MissingTokenException(
-				"Expected an opening bracket '(' before seeing a comma ',' or closing bracket ')'",
-				index
+					"Expected an opening bracket '(' before seeing a comma ',' or closing bracket ')'",
+					index
 			);
 		}
 
@@ -149,10 +143,12 @@ public class Parser {
 			((UnfinishedArgsExpression) args).tokens.add(expr);
 		} else {
 			throw new UnexpectedTokenException(
-				"Expected to see an opening bracket '(' or a comma ',' right before an expression followed by a " +
-					"closing bracket ')' or a comma ','", index);
+					"Expected to see an opening bracket '(' or a comma ',' right before an expression followed by a " +
+							"closing bracket ')' or a comma ','", index);
 		}
 	}
+
+	// visitor methods
 
 	void visitId(String id) {
 		this.push(new IdToken(id));
@@ -217,8 +213,8 @@ public class Parser {
 
 			if (!(pop instanceof UnfinishedArgsExpression)) {
 				throw new UnexpectedTokenException(
-					"Expected to see an opening bracket '(' or a comma ',' right before an expression followed by a " +
-						"closing bracket ')' or a comma ','", index);
+						"Expected to see an opening bracket '(' or a comma ',' right before an expression followed by a " +
+								"closing bracket ')' or a comma ','", index);
 			}
 			args = (UnfinishedArgsExpression) pop;
 		}
@@ -236,7 +232,7 @@ public class Parser {
 			} else if (!expressionOnTop) {
 				throw new UnexpectedTokenException("Encountered a trailing comma in brackets that aren't a call", index);
 			} else {
-				this.push(args.tokens.getFirst());
+				this.push(args.tokens.get(0));
 			}
 		}
 	}
@@ -260,7 +256,7 @@ public class Parser {
 	 */
 	void visitBinaryOperator(BinaryOp binaryOp) {
 		// reduce the expressions to the needed priority level
-		ExpressionElement left = this.expressionReducePop(binaryOp.priority());
+		ExpressionElement left = this.expressionReducePop(binaryOp.getPriority());
 		// stack[ {'a', '*'}, 'b'], token = '+' -> stack[], left = {'a', '*', 'b'}
 		//                                      -> stack[{{'a', '*', 'b'}, '+'}]
 		// stack[ {'a', '+'}, 'b'], token = '+' -> stack[], left = {'a', '+', 'b'}
@@ -291,8 +287,8 @@ public class Parser {
 					throw new MissingTokenException("Expected a closing bracket", endIndex);
 				} else {
 					throw new UnexpectedTokenException(
-						"The stack of tokens isn't empty at the end of the expression: " + this.stack +
-							" top: " + result, endIndex);
+							"The stack of tokens isn't empty at the end of the expression: " + this.stack +
+									" top: " + result, endIndex);
 				}
 			} else {
 				Element top = this.peek();
@@ -300,16 +296,20 @@ public class Parser {
 					throw new MissingTokenException("Expected a closing bracket", endIndex);
 				} else if (top instanceof PriorityOperatorElement) {
 					throw new MissingTokenException(
-						"Expected a identifier, constant or subexpression on the right side of the operator",
-						endIndex);
+							"Expected a identifier, constant or subexpression on the right side of the operator",
+							endIndex);
 				} else {
 					throw new UnexpectedTokenException(
-						"The stack of tokens contains an unexpected token at the top: " + this.stack,
-						endIndex);
+							"The stack of tokens contains an unexpected token at the top: " + this.stack,
+							endIndex);
 				}
 			}
 		} else {
 			throw new MissingTokenException("The input seems to be empty", endIndex);
 		}
+	}
+
+	public static ExpressionElement parse(String input, ParserOptions options) throws ParseException {
+		return Tokenizer.parse(input, options);
 	}
 }
